fix: CodeAgent
- Simplify Java quick-edit validation flow and diagnostics handling
- Streamline retry logic and limit checks to reduce nested branching